# huginn-muninn

./: .env.example  .git-commit-msg.tmp  .gitignore  ANTI-WEAPONIZATION-CHARTER.md  CHANGELOG.md  Dockerfile  README.md  REJECTIONS.md  ROADMAP.md  docker-compose.yml  pyproject.toml
data/: disarm_techniques.json
docs/: Huginn-Muninn-One-Pager.docx  Huginn-Muninn-PKM-Summit-Brief.docx  Huginn-Muninn-Presentation-Brief-v2.docx  Huginn-Muninn-Research-Foundation.docx  RELEASE-EVOLUTION.md  SETUP-GUIDE.md  bridge-builders-field-guide.md  engagement-playbook-sc01.md  generate-comprehensive-findings.js  huginn-muninn-one-pager.js  huginn-muninn-pkm-summit-brief.js  huginn-muninn-presentation-brief-v2.js  huginn-muninn-research-foundation.js  linkedin-article-draft.md  linkedin-post-draft.md  linkedin-post-sc01.md  linkedin-post-v0.9.0-draft.md
gallery/: build.js
graph/: build_graph.py  perspectives.json
research/: RESEARCH.md  bridge-scoped-diagnostics-scientific-grounding.md  gorgon-trap-integration.md  gorgon-trap-symmetric-actor-extension.md  sophists-and-the-three-questions.md
scripts/: run_calibration.py  run_calibration_m2.py
tests/: conftest.py  run_bridge_scenarios.py  run_scenario_claude.py  scenarios.py  test_agents.py  test_api.py  test_batch.py  test_cli.py  test_comparison.py  test_config.py  test_contracts.py  test_db.py  test_docs_language.py  test_e2e_escalation.py  test_e2e_method1.py  test_e2e_method2.py  test_escalation.py  test_gorgon_symmetry.py  test_graph_builder.py  test_integration.py  test_integration_m2.py  test_integration_phase5.py  (+13 more)
(+74 files in other folders)
