[project]
name = "huginn-muninn"
version = "0.3.0"
description = "Fact-checking with Common Humanity -- the fact-checker that finds common ground"
readme = "README.md"
authors = [
    { name = "Jochen Schmiedbauer", email = "Jochen@jochens.biz" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "click>=8.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.4.0",
]

[project.scripts]
huginn = "huginn_muninn.cli:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring a running Ollama instance (deselect with '-m not e2e')",
]

[dependency-groups]
dev = [
    "pytest-httpx>=0.36.0",
]
